change boilerplateController
